Bug: corrected positioning of spacing lines in input fields

--- a/src/app/shared/ui/forms/subtask-input-group/subtask-input-group.scss
+++ b/src/app/shared/ui/forms/subtask-input-group/subtask-input-group.scss
@@ -24,7 +24,7 @@ ul.subtask-list {
       flex-shrink: 0;
     }
 
-    > * {
+    >* {
       flex: 1;
     }
 
@@ -45,10 +45,11 @@ ul.subtask-list {
       opacity: 1;
     }
 
-    .btn{
+    .btn {
       z-index: 3;
-      &:hover{
-        &:after{
+
+      &:hover {
+        &:after {
           content: "";
           position: absolute;
           background-color: $grey-light;
@@ -73,6 +74,7 @@ ul.subtask-list {
 }
 
 .input-group-sm {
+
   input.form-control,
   .btn {
     height: 1.875rem;
@@ -107,18 +109,22 @@ input {
   border: 0.0625rem solid $grey-light;
   border-radius: $base-border-radius;
   height: 3rem;
+
   &:focus {
     box-shadow: none;
   }
+
   &::placeholder {
     color: $grey-light;
   }
 }
-.input-group{
-  input{
+
+.input-group {
+  input {
     border-radius: $base-border-radius !important;
   }
-  button{
+
+  button {
     position: absolute;
     border: 0;
     right: 0;
@@ -126,19 +132,31 @@ input {
     transform: translateY(-50%);
     z-index: 5;
 
-    &:hover{
+    &:hover {
       background: none;
     }
-    &.clear{
+
+    &.clear {
       right: 2rem;
-      &:before{
+
+      &:before {
         content: '';
         position: absolute;
         height: 1.5rem;
         width: 1px;
-        top:.50rem;
-        right: 0;
+        top: 50%;
+        right: 0.5rem;
+        transform: translateY(-50%);
         background-color: $grey-light;
+      }
+    }
+  }
+
+  &.input-group-sm {
+    button.clear {
+      &:before {
+        height: 1rem;
+        right: 0rem;
       }
     }
   }
